

                 SCons - a software construction tool

                            Change Log


RELEASE 3.0.0.alpha.20170614 - Mon, 14 Jun 2017 12:23:56 -0400

  From William Blevins:
    - Updated D language scanner support to latest: 2.071.1. (PR #1924)
      https://dlang.org/spec/module.html accessed 11 August 2016
      - Enhancements:
        - Added support for selective imports: "import A : B, C;" -> A
        - Added support for renamed imports. "import B = A;" -> A
        - Supports valid combinations: "import A, B, CCC = C, DDD = D : EEE = FFF;" -> A, B, C, D
      - Notes:
        - May find new (previously missed) Dlang dependencies.
        - May cause rebuild after upgrade due to dependency changes.
    - Updated Fortran-related tests to pass under GCC 5/6.
    - Fixed SCons.Tool.Packaging.rpm.package source nondeterminism across builds.

  From William Deegan:
    - Removed deprecated tools CVS, Perforce, BitKeeper, RCS, SCCS, Subversion.
    - Removed deprecated module SCons.Sig
    - Added prioritized list of xsltproc tools to docbook. The order will now be as
      follows: xsltproc, saxon, saxon-xslt, xalan  (with first being highest priority, first
      tool found is used)
    - Fixed MSVSProject example code (http://scons.tigris.org/issues/show_bug.cgi?id=2979)
    - Defined MS SDK 10.0 and Changed VS 2015 to use SDK 10.0

  From Daniel Holth:
    - Add basic support for PyPy (by deleting __slots__ from Node with a
      metaclass on PyPy); wrap most-used open() calls in 'with' statements to
      avoid too many open files.
    - Add __main__.py for `python -m SCons` in case it is on PYTHONPATH.
    - Always use highest available pickle protocol for efficiency.

  From Gaurav Juvekar:
    - Fix issue #2832: Expand construction variables in 'chdir' argument of builders. (PR #463)
    - Fix issue #2910: Make --tree=all handle Unicode. (PR #427)
    - Fix issue #2788: Fix typo in documentation example for sconf. (PR #388)
